# SendAnywhere-Desktop-SDK

./: .gitignore  CMakeLists.txt  README.md
SDK/: CMakeLists.txt
SDK/include/: sendanywhere.h
SDK/include/internal/: paprika.h
SDK/lib/osx/: libsendanywhere.dylib
SDK/lib/win32/: sendanywhere.lib
SDK/lib/windows/win32/: sendanywhere.lib
SDK/lib/windows/x64/: sendanywhere.lib
SDK/src/: sendanywhere.c
example/: CMakeLists.txt  sample_receive.c  sample_send.c
